tests/codegen/compile/runtime/fail/invalid_test_attr.stderr
error: Second test attribute is supplied.
 --> $DIR/invalid_test_attr.rs:6:1
  |
6 | #[test]
  | ^^^^^^^
  |
  = note: test attribute is supplied by default
